--- a/FraimingWorkShop.csproj
+++ b/FraimingWorkShop.csproj
@@ -18,18 +18,18 @@
 
   <ItemGroup>
     <Folder Include="Services\" />
-  </ItemGroup>
+  </ItemGroup>  
 
+  <ItemGroup>
+    <Resource Include="Data\icon.ico" />
+  </ItemGroup>
+  
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.7" />
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="Data\icon.ico" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="Data\FramingWorkshopDB.db">
+    <None Update="FramingWorkshopDB.db">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
